fix app props